2013-04-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise): Because the individual lines of an
	internal data block ("here data") end in \n rather than \0, the test
	for termination of the final field on the line could fail.  This led
	to attempted memory access beyond the end of the block.

2013-04-25  Lars Hecking  <lhecking@users.sourceforge.net>

	* Makefile.am docs/Makefile.am man/Makefile.am: Clean up processing
	of lisp files gnuplot-gui.elc and gnuplot.elc, packaging of file
	figure_missing.pdf.

2013-04-25  Christoph Bersch <usenet@bersch.net>

	* src/gadgets.c src/gadgets.h src/graphics.c src/term.c:
	Implement the Sutherland-Hodgman algorithm for clipping a general
	polygon against a rectangular bounding box.  Apply this to clip
	polygon objects (including circles and ellipses) and arrowheads.

	* src/graphics.c (plot_filledcurves finish_filled_curve):
	Use new polygon clipping code for filledcurves.

2013-04-24  Thomas Mattison  <mattison <at> phas.ubc.ca>

	* src/fit.c:  Optional one-line progress reports. Move code to output
	status reports and final results to new routines.
	Patchset #230.

	* src/fit.c (regress):  Fit did not converge if maximum lambda was
	exceeded.  Add new message for this case.

2013-04-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c|h src/save.c src/set.c src/show.c src/unset.c docs/gnuplot.doc:
	New options quiet|results|brief|verbose for `set fit` to select verbosity
	of fit's output.  Default to brief one-line reports.  'verbose' selects the
	traditional full report.

	* src/fit.c (backup_file):  Remove code path for Win32s.

	* src/fit.c (show_results):  Print correlation matrix only if there is
	more than one parameter.

	* demo/fit.dem:  Update to new syntax. Reduce number of pause statements,
	remove plots which show only the data or duplicate techniques already
	demonstrated.  Add some more comments and plot titles.

	* src/show.c (show_variables):  Avoid extra newline in output.
